# QmlVtkTest

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  VtkSurfaceItem.cpp  VtkSurfaceItem.h  main.cpp  main.qml
